# SpectralEntropy

./: pyproject.toml  setup.py
