[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "Cython>=0.29.32,<3.0",      # Safe range that matches your original conda files
    "numpy>=1.17.4",             # Required because setup.py calls np.get_include()
]
build-backend = "setuptools.build_meta"

[project]
name = "SpectralEntropy"
version = "1.0.0"
description = "Spectral Entropy calculations for mass spectrometry"
readme = "README.md"
authors = [
    {name = "Yuanyue Li", email = "yuanyue.li@wustl.edu"},
    {name = "Triston Groff", email = "triston.lee.groff@gmail.com"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.7"
keywords = ["mass-spectrometry", "spectral-entropy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "numpy>=1.17.4",
    "scipy>=1.3.2",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/triston-groff/SpectralEntropy"
Repository = "https://github.com/triston-groff/SpectralEntropy"
