[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "Cython>=0.29.32,<3.0",   # matches your original conda environment
    "numpy>=1.17.4",
]
build-backend = "setuptools.build_meta"

[project]
name = "SpectralEntropy"
version = "1.0.0"
description = "Spectral Entropy calculations for mass spectrometry"
readme = "README.md"
authors = [
    {name = "Yuanyue Li", email = "yuanyue.li@wustl.edu"},
    {name = "Triston Groff", email = "triston.lee.groff@gmail.com"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.7"
keywords = ["mass-spectrometry", "spectral-entropy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "numpy>=1.17.4",
    "scipy>=1.3.2",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.setuptools]
packages = ["spectral_entropy"]

[tool.setuptools.package-data]
"spectral_entropy" = ["*.pyx"]


# Cython extension configuration
[tool.setuptools.extension]
ext_modules = [
    {name = "spectral_entropy.tools_fast", sources = ["spectral_entropy/tools_fast.pyx"]}
]
