[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "Cython>=0.29.32,<3.0",
    "numpy>=1.17.4",
]
build-backend = "setuptools.build_meta"

[project]
name = "SpectralEntropy"
version = "1.0.0"
description = "Fast spectral entropy calculation for mass spectrometry"
readme = "README.md"
authors = [
    {name = "Triston Groff", email = "triston.lee.groff@gmail.com"},
    {name = "Yuanyue Li", email = "yuanyue.li@wustl.edu"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.17.4",
    "scipy>=1.3.2",
]

[tool.setuptools]
packages = ["spectral_entropy"]
include-package-data = true

[tool.setuptools.package-data]
"spectral_entropy" = ["*.pyx"]
